# CAM

./: .gitignore  README.md  VALIDATION.md  calib.json  pyproject.toml  requirements.txt  results.csv
deploy/: Dockerfile.edge  docker-compose.yml
docs/: ARCHITECTURE.md  CALIBRATION_HELP.md  CRASH_VALIDATION.md  HARDENING_0.11.md  IDENTITY_VALIDATION.md  MERGE_OCCLUSION_HARDENING.md  OPERATIONS_0.12.md  PILOT_READINESS.md  QUALITY_REPORT.md  README.md  RELEASE_NOTES.md  VALIDATION.md  VISION.md
edge/: CMakeLists.txt
edge/include/: cam_plugin.h
edge/src/: calibration.cpp  calibration.hpp  device.cpp  device.hpp  main.cpp  pipeline.cpp  pipeline.hpp  scheduler.cpp  scheduler.hpp  storage.cpp  storage.hpp  sync.cpp  sync.hpp
edge/src/events/: engine.cpp  engine.hpp
edge/src/events/plugins/: speed.cpp  wrong_way.cpp
edge/src/inference/: backend.cpp  backend.hpp
edge/src/vision/: extractors.cpp  extractors.hpp  tracker.cpp  tracker.hpp
server/: Dockerfile  package-lock.json  package.json  tsconfig.json
tests/: test_calibration.py  test_crash_detector.py  test_crash_fps_invariance.py  test_crash_hardening.py  test_identity_manager.py  test_operations.py  test_overlay.py  test_pilot_analytics.py  test_scene_and_event_state.py  test_speed.py  test_timestamp_speed.py  test_tracking_and_speed.py  test_video_regression.py  test_vision_quality.py
tools/: render_identity_validation.py  replay_cached_crash_regression.py  stress_crash_detector.py
traffic_intel/: __init__.py  analytics.py  analytics_store.py  app.py  archive.py  calibrate.py  capture.py  config.py  crash_detector.py  crash_visuals.py  dashboard.py  doctor.py  domain.py  engine.py  identity.py  live.py  pipeline.py  replay.py  report.py  scene.py  speed.py  tracking.py  validate_crashes.py  vision_quality.py
validation/: README.md  expected.json  identity_results.json  latest_cached_results.json  latest_stress_results.json  rebuild_15-27-31.json
web/: Dockerfile  index.html  (+3 more)
(+63 files in other folders)
